	* Added a method addCacheTags() to tslib_fe so that extensions can easily tag cache entries for pages
	* Added the caching framework in typo3/init.php so that it is available in the BE, too
	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
	* Changed table cache_pagesection to use t3lib_cache

2008-09-23  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9411: Editors cannot create new translations of pages

2008-09-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9401: Use debug() for sqlDebug (thanks to Steffen Kamper)

2008-09-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8719: File upload ends up in parse_url error on Windows (thanks to Steffen Kamper)

2008-09-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9404: htmlArea RTE: Cleaning out deprecated extension variables

2008-09-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #9393: Small code cleanup in class.t3lib_treeview.php
	* Fixed bug #8578: Umlauts get displayed wrong in Web>Access module after updating rights (Thanks to Tobias Liebig and Susanne Moog)

2008-09-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9384: FE session hijacking

2008-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9393: Cosmetic Code Cleanup for the cms sysext

2008-09-18  Martin Kutschker  <masi@typo3.org>

	* Followup to bugfix #8950: clean up code
	* Fix bug #8588: Admin tools -> User Admin -> List users online broken when [BE][lockIP] is set to < 4

2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
	* Fixed bug #9320: Adding a new mount-type "readonly" for temporary filemounts (thanks to Steffen Kamper)
	* Added feature #8899: Configuration of uploads and create folder in linkbrowser (thanks to Steffen Kamper and Dmitry Dulepov)

2008-09-18  Dmitry Dulepov  <dmitry@typo3.org>
