@@ -33,6 +33,7 @@
 	* Added the caching framework in typo3/init.php so that it is available in the BE, too
 	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
 	* Changed table cache_pagesection to use t3lib_cache
+	* Changed table cache_hash to use t3lib_cache
 
 2008-09-23  Martin Kutschker  <masi@typo3.org>
 
